...
                                                <constraint firstItem="j9v-bS-mvg" firstAttribute="top" secondItem="ouS-fz-orB" secondAttribute="bottom" constant="10" id="yOw-NG-mrg"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                            <searchBar contentMode="redraw" restorationIdentifier="Searchbar" placeholder="画像検索" translatesAutoresizingMaskIntoConstraints="NO" id="qbw-7V-we2">
                                <rect key="frame" x="0.0" y="49" width="375" height="51"/>
                                <textInputTraits key="textInputTraits"/>
                            </searchBar>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="zIQ-Ym-IxO"/>
                        <color key="backgroundColor" systemColor="systemYellowColor"/>
...
                            <constraint firstItem="qbw-7V-we2" firstAttribute="top" secondItem="zIQ-Ym-IxO" secondAttribute="top" constant="5" id="pzd-RN-2fs"/>
                            <constraint firstItem="8tp-WP-E7P" firstAttribute="top" secondItem="qbw-7V-we2" secondAttribute="bottom" id="s6K-iZ-CNV"/>
                            <constraint firstItem="8tp-WP-E7P" firstAttribute="leading" secondItem="zIQ-Ym-IxO" secondAttribute="leading" id="sRa-vm-0JO"/>
                            <constraint firstItem="8tp-WP-E7P" firstAttribute="trailing" secondItem="zIQ-Ym-IxO" secondAttribute="trailing" id="vix-6x-dVd"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="MVVC-Rxswift" id="kqJ-hE-Rcc"/>
                    <connections>
                        <outlet property="searchber" destination="qbw-7V-we2" id="0Jw-uJ-F7F"/>
                        <outlet property="tableview" destination="8tp-WP-E7P" id="iJj-Ig-cKx"/>
                        <segue destination="Gam-cs-EzP" kind="show" id="VWj-D3-kyU"/>
                    </connections>
                </viewController>
...
